# numeth

./: CMakeLists.txt  README.md  numeth.sln
cmake/: catch.cmake
include/numeth/: matrix.hpp  vector.hpp
src/: CMakeLists.txt  matrix.cpp  vector.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/matrix/: CMakeLists.txt
tests/vector/: CMakeLists.txt  vectortest.cpp
